--- a/projecteuler.cabal
+++ b/projecteuler.cabal
@@ -12,8 +12,15 @@ common warnings
     ghc-options: -Wall
 
 library
-    import:           warnings
-    exposed-modules:  EulerUtils
-    build-depends:    base ^>=4.17.2.1
-    hs-source-dirs:   src
-    default-language: GHC2024
+  hs-source-dirs:   src
+  exposed-modules:  EulerUtils
+  build-depends:    base >=4.17
+  default-language: Haskell2010
+
+executable euler-problems
+  import:           warnings
+  main-is:          Main.hs
+  other-modules:    Problem001
+  hs-source-dirs:   src
+  build-depends:    base, projecteuler
+  default-language: Haskell2010
