--- a/projecteuler.cabal
+++ b/projecteuler.cabal
@@ -14,13 +14,8 @@ common warnings
 library
   hs-source-dirs:   src
   exposed-modules:  EulerUtils
-  build-depends:    base >=4.17
-  default-language: Haskell2010
-
-executable euler-problems
-  import:           warnings
-  main-is:          Main.hs
-  other-modules:    Problem001
-  hs-source-dirs:   src
-  build-depends:    base, projecteuler
+  build-depends:    
+    base >=4.17,
+    containers >=0.7,
+    parsec>=3.1.17.0
   default-language: Haskell2010
