--- a/projecteuler.cabal
+++ b/projecteuler.cabal
@@ -17,5 +17,6 @@ library
   build-depends:    
     base >=4.17,
     containers >=0.7,
-    parsec>=3.1.17.0
+    parsec>=3.1.17.0,
+    matrix >= 0.3.6.4
   default-language: Haskell2010
