--- a/projecteuler.cabal
+++ b/projecteuler.cabal
@@ -15,6 +15,7 @@ library
   hs-source-dirs:   src
   exposed-modules:  EulerUtils
   build-depends:    
+    array >=0.5.7.0,
     base >=4.17,
     containers >=0.7,
     parsec>=3.1.17.0,
