--- a/projecteuler.cabal
+++ b/projecteuler.cabal
@@ -14,7 +14,8 @@ common warnings
 library
   hs-source-dirs:   src
   exposed-modules:  EulerUtils
-  build-depends:    
+  build-depends:
+    MemoTrie >= 0.6.10,
     array >=0.5.7.0,
     base >=4.17,
     containers >=0.7,
